--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,10 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Log in to Docker Hub
-        run: docker login -u priyankak3 -p ${{ secrets.DOCKER_HUB_TOKEN }}
+        uses: docker/login-action@v2
+        with:
+          username: priyankak3
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build Docker Image
         run: docker build -t priyankak3/violetapple-springboot-project:latest .
