--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -21,16 +21,15 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: mvn clean package
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: priyankak3
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      - name: Log in to Docker Hub using CLI
+        run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t priyankak3/violetapple-springboot-project:latest .
+        run: |
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/deutsche-springboot-demo:latest .
 
       - name: Push Docker Image to Docker Hub
-        run: docker push priyankak3/violetapple-springboot-project:latest
+        run: |
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/deutsche-springboot-demo:latest
